--- a/modules/689/pages/doc-06.adoc
+++ b/modules/689/pages/doc-06.adoc
@@ -1,4 +1,4 @@
-= Document 6: Memorandum by Privy Councillor Ricke, Sovereign Order,
+= Document 6: Memorandum by Privy Councillor Reck, Sovereign Order,
 :page-role: wide
 
 == Overview
@@ -33,7 +33,7 @@ Kreutzinger ein- gegebnen Werthe.
 Bbg 16. Decbr 41
 
 
-[Ricke?]
+Reck
 Verte
 ....
 |
@@ -53,7 +53,7 @@ for which it was sold to Krückeberg. But that is twice the value
 given by Head Forester Kreuzinger.
 
 
-[Ricke?]
+Reck
 turn over
 ____
 |===
