--- a/modules/689/pages/doc-08.adoc
+++ b/modules/689/pages/doc-08.adoc
@@ -47,7 +47,7 @@ RC.
 Die Obligation wäre zu bestätigen und demnächst K. R. Berger mit
 Zahlunganweisung, jedoch nicht an den Krückeberg, sondern an das
 Amt zu versehe[n]. Bbg. 20. Jan 42.
-                     Ricke
+                     Reck
 
                       vert[retend]
 ....
@@ -78,7 +78,7 @@ Hauck D^r^ Neuhsel Höcker *(district officer)*
 Confirm the loan bond, then issue a payment order to Councillor
 K. R. Berger—-not to Krückeberg, to the Amt.
 Bückeburg, 20 Jan. 1842.
-*Ricke, acting on behalf of the Rentkammer.*
+*Reck, acting on behalf of the Rentkammer.*
 ____
 |===
 
