--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -69,7 +69,7 @@ Georg Wilhelm
 ____
 |===
 
-=== Ricke's Comments to Rentcammer on Prince's Reply/Directions?
+=== Reck's Comments to Rentcammer on Prince's Reply/Directions?
 
 [cols="1a,1a",frame=none,grid=none,options="noheader"]
 |===
@@ -97,7 +97,7 @@ ohnedem durch den von O. f. Kreuzinger vorgeschlagen Abzugsgraben
 wahrscheinlich bedeutend verbessert werden kann.
 Bbg 23. Dec. 41.
 
-RC     Rick[e]
+RC    Reck 
 ____
 
 |
@@ -120,7 +120,7 @@ the repurchase of the land by him, which can be significantly
 improved by the drainage trench suggested by O. f. Kreuzinger.
 Bückeburg, 23 Dec. 41
 
-RC[Rentcammer]         Ricke
+RC[Rentcammer]         Reck
 ____
 |===
 
@@ -130,7 +130,7 @@ ____
 |image::17-l.png[link=self]
 |===
 
-=== Ricke's reply to the Prince
+=== Reck's reply to the Prince
 
 [cols="1a,1a",frame=none,grid=none,options="noheader"]
 |===
@@ -148,7 +148,7 @@ nutzbares Land, das Kreutzinger zu 400 rt taxirt für mehr als 800
 rtn wiedergekauft wurde.
 Bbg. 23. Decbr.
 
-Rick[e]
+Reck
 ____
 
 |
@@ -162,7 +162,7 @@ still be smaller than if the parcel of land in question—of little
 use and appraised by Kreutzinger at 400 rt—were bought back for
 more than 800 rt.
 Bbg., 23 Dec. 1841.
-Rick[e]
+Reck
 ____
 |===
 
