--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -87,7 +87,7 @@ Gesuch um
 |10
 
 |6.
-|Vortrag des GKR odReck
+|Vortrag des GKR od Reck
 |〃
 |〃
 |〃
@@ -101,7 +101,7 @@ Gesuch um
 |19
 
 |〃
-|P. V. des H odReck u. Höchstes Rescr. Sr. Durchlaucht
+|P. V. des H od Reck u. Höchstes Rescr. Sr. Durchlaucht
 |〃
 |〃
 |〃
@@ -203,7 +203,7 @@ transliteration (diplomatic accuracy) and render the English **to the Amt Bücke
 |11
 
 |〃
-|Memorandum by Privy Councillor Reck
+|Report of Senior Government Councillor Reck
 |〃
 |〃
 |〃
@@ -241,7 +241,7 @@ transliteration (diplomatic accuracy) and render the English **to the Amt Bücke
 |10
 
 |6.
-|Memorandum by Privy Councillor Reck
+|Report of Senior Government Councillor Reck
 |〃
 |〃
 |〃
@@ -255,7 +255,7 @@ transliteration (diplomatic accuracy) and render the English **to the Amt Bücke
 |19
 
 |〃
-|Protocol minute by Privy Councillor Reck and Highest Rescript of His Serene Highness
+|Opinion of Councillor Reck and the decree of His Serene Highness.
 |〃
 |〃
 |〃
