--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -210,7 +210,7 @@ transliteration (diplomatic accuracy) and render the English **to the Amt Bücke
 |15
 
 |〃
-|Office draft of a chamber rescript to Mr. Krückeberg
+|Copy of the Chamber's decree addressed to Krückeberg
 |〃
 |〃
 |〃
