--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -225,7 +225,7 @@ transliteration (diplomatic accuracy) and render the English **to the Amt Bücke
 |21
 
 |〃
-|xref:doc-04.adoc#doc-index-4-2[Office draft of a chamber rescript to Chief Forester Creuzinger]
+|xref:doc-04.adoc#doc-index-4-2[Copy of the Chamber’s decree addressed to Official Creuzinger]
 |Item: petition for …
 |〃
 |〃
