--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -248,7 +248,7 @@ transliteration (diplomatic accuracy) and render the English **to the Amt Bücke
 |16
 
 |〃
-|Highest rescript [His Government]
+|Decree of His Serene Highness’ Government
 |〃
 |〃
 |〃
