--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -294,7 +294,7 @@ transliteration (diplomatic accuracy) and render the English **to the Amt Bücke
 |
 
 |9.
-|Report from the Amt Bückeburg
+|Report from the District Office of Bückeburg
 |
 |Bückeburg
 |1842
