--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -262,7 +262,7 @@ transliteration (diplomatic accuracy) and render the English **to the Amt Bücke
 |23
 
 |7.
-|xref:doc-07.adoc#doc-index-7-1[Office draft (rescript) to the Amt Bückeburg]
+|xref:doc-07.adoc#doc-index-7-1[Copy of the decree to the Bückeburg district office]
 |
 |Bückeburg
 |1841
