--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -302,7 +302,7 @@ transliteration (diplomatic accuracy) and render the English **to the Amt Bücke
 |8
 
 |10.
-|Bond for 200 Reichstaler, *courant*, borrowed from the princely chamber treasury
+|Bond for 200 Reichsthaler in currency, borrowed from the princely treasury.
 |Bond
 |
 |
