--- a/todo.adoc
+++ b/todo.adoc
@@ -2,12 +2,12 @@
 
 == Document Index, Definitions, Timelines and Events
 
+* The two NC 5702 documents or decrees are part of document 6; therefore, rearrange the Antora navigation
+and doc-6.adoc page to reflect this.
+
+* Add xref-links to all the document index entries
+
 * Move the glossary in doc-index.adoc elsewhere, to a separate page?
-* It seems obvious now that the two NC 5702 documents or decrees are part of document 6. Rearrange the Antora
-navigation and doc-6.adoc page to reflect this.
-+
-But first work on understanding and reorganizing nc-5702.adoc
-** Add to the NC 5 702 documents/decrees that horizontal and small left-margin text.
 
 * Finish the xrefs that link the document index entries to the actual documents (and supplemental documents) and an
 anchor in the doducment 
