--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -1,7 +1,7 @@
 = Document 3: Petition of Colon Krückeberg, with Valuation and Resolution
 :page-role: wide
 
-[[idx-3-1]]
+[[doc-index-3-1]]
 == Petition of Colon (11 November 1841)
 
 === Summary
@@ -132,7 +132,8 @@ filed.
 ....
 |===
 
-== Valuation and Clerk’s Opinion (15 November 1841)
+[[doc-index-3-2]]
+== Valuation and Senior Government Councillor Reck's Opinion (15 November 1841)
 
 [role="section-narrow"]
 === Summary
@@ -224,7 +225,7 @@ Reck
 ....
 |===
 
-[[doc3-coverslip]]
+[[doc-index-3-3]]
 == Cover Slip and Resolution (15 November 1841)
 
 [role="section-narrow"]
