--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -2,7 +2,7 @@
 :page-role: wide
 
 [[doc-index-3-1]]
-== Petition of Colon (11 November 1841)
+== Petition of Colon Krückeberg (11 November 1841)
 
 === Summary
 
