--- a/todo.adoc
+++ b/todo.adoc
@@ -2,22 +2,13 @@
 
 == Document Index, Definitions, Timelines and Events
 
-* The two NC 5702 documents or decrees are part of document 6; therefore, rearrange the Antora navigation
+* Add xref-links to all the document index entries, and merge 
+the two NC 5702 documents or decrees are part of document 6, and then rearrange the Antora navigation
 and doc-6.adoc page to reflect this.
-
-* Add xref-links to all the document index entries
 
 * Move the glossary in doc-index.adoc elsewhere, to a separate page?
 
-* Finish the xrefs that link the document index entries to the actual documents (and supplemental documents) and an
-anchor in the doducment 
-
-* Check the "NC" numbers for each document in the document index and create a table that lists these
-numbers along with the subject and the documents they refer to.
-* Creat a glossary with definitions of key terms and examples that illustrate and show the meaning.
-* Ensure the accuracy of the translations
-* Within the chronological story of the Rentcammer documents, related reports and its decision, create a chronology
-of facts and events in Johann Heinrich Krückeberg's financial trial. 
+* Create a table of "N.C." numbers "Ad N.C." numbers their document index numbers.
 
 === Consoliate 
 
