--- a/modules/689/pages/doc-06.adoc
+++ b/modules/689/pages/doc-06.adoc
@@ -1,7 +1,8 @@
-= Document 6: Memorandum by Privy Councillor Reck, Sovereign Order,
+= Document 6: Report by Senior Councillor Reck, Sovereign Decree, Opion of Coouncillor Reck and Decress of His Serene Highness
 :page-role: wide
 
-== Overview
+[[doc-index-6-1]]
+== Report of Senior Government Councillor Reck
 
 [cols="1a,1a"]
 |===
@@ -9,7 +10,7 @@
 |image::15-r-vertical.png[link=self]
 |===
 
-== Transliteration and Translation
+=== Transliteration and Translation
 
 [cols="1a,1a"]
 |===
@@ -39,7 +40,7 @@ Verte
 |
 [verse]
 ____
-regarding NC 5587 — Document #6
+regarding NC 5587 [which is document 5]                   6 
 
 
 Since, according to Head Forester Kreuzinger’s report,
@@ -100,3 +101,219 @@ Bückeburg 16 Dec. 41
 (see at the end) sgined       Reck   
 ____
 |===
+
+[[doc-index-6-2]]
+== Decree of His Serene Highness' Government
+
+[cols="1a,1a",frame=none,grid=none,options="noheader"]
+|===
+|image::16-l.png[link=self]
+|image::16-r.png[link=self]
+|===
+
+=== Transliteration and Translation
+
+[cols="1a,1a",frame=none,grid=none,options="noheader"]
+|===
+|Transliteration|Translation
+
+|
+[literal,subs="verbatim,quotes"]
+....
+NC 5702               
+
+[rok]
+
+           E[ingegangen]. in d. K. 21 Dec 1841
+Der Wiederankauf dieses Grundstückes für den früheren
+Verkaufs-Preis ist hiernach gewiß nicht vortheilhaft.  Es ist
+aber zu erwägen, daß der Vater des Suppl. in guten
+Vermögens-Umständen dieses Grundstück zu dem an- gegebenen hohen
+Kaufpreise von der Kammer gekauft hat, und dem jetzigen Colon —
+und eine verlorene Pacht — durch unglückliche Umstände der
+Concurs bevorsteht (wenn ihm dadurch nicht geholfen wird).
+Allerdings hat die Kammer keine Verpflichtung, das Grundstück
+wieder zurückzunehmen; allein (obgleich sie es zu dem
+angefallenen Preise verkauft hat,) unter diesen Umständen scheint
+es mir doch billig, wenn die Kammer es etwa — nicht räthlicher —
+findet, dem Krückeberg vorerst die erbetenen 200 Rthl zu leihen?
+Bbg 19 Dec 1841.
+
+Georg Wilhelm
+....
+|
+[verse]
+____
+NC 5702               
+
+[rok]
+          Received in the Chamber, 21 Dec 1841.
+
+The buy-back of this parcel at the former selling price would, by
+this reckoning, certainly not be advantageous. Still, it should
+be considered that the petitioner’s father, when he was in good
+financial circumstances, bought this parcel from the Chamber at
+the stated high purchase price; and that for the present holder
+(the Colon)—and with forfeiture of the lease as well—bankruptcy
+is impending if he is not helped by that. To be sure, the Chamber
+is under no obligation to take the parcel back; however (although
+it sold it for the price then realized), in these circumstances
+it seems fair to me that, unless it finds that unwise, the
+Chamber should for the time being lend Krückeberg the requested
+200 thalers.
+Bückeburg, 19 Dec 1841.
+
+Georg Wilhelm
+____
+|===
+
+[[doc-index-6-3]
+== Opinion of Councillor Reck and the decree of His Serene Highness.
+
+[cols="1a,1a",frame=none,grid=none,options="noheader"]
+|===
+|Transliteration|Translation
+
+|
+[verse]
+____
+P.V.
+Soll dem p Krückeberg gründlich ge- helfen werden, so müsste
+diess wohl am sichersten dadurch geschehe, wenn demselben das
+fragliche Land zu dem Preise, des Suppli- canten Vater der Kammer
+dafür bezahlt, wieder abgenommen wird, wodurch er ohne ein
+neues Anlehn nöthig zu haben, gleichzeitig ein schlechtes Grund-
+stück wieder los wird, und eine so bedeutende Summe Geldes zu
+Händen bekommt, daß er sich von seinen meisten Schulden wird
+befreien können.
+
+Leichteren Kaufes würde übrigens die Kammer davon kommen, wenn
+die 200 rt Darlehen bewilligt werden. Der Zweck dem Krückeberg
+gründlich zu helfen, scheint mir indes dadurch nicht erreicht
+zu werden.  Im Interesse des Krücke- berg wurde ich daher für den
+Krückeberg Wiederankauf des Landes mich entscheiden, welches
+ohnedem durch den von O. f. Kreuzinger vorgeschlagen Abzugsgraben
+wahrscheinlich bedeutend verbessert werden kann.
+Bbg 23. Dec. 41.
+
+RC    Reck 
+____
+
+|
+[verse]
+____
+per Vorstehung (by the authority of)
+If thorough assistance is to be given to Mr. Krückeberg, this
+would most likely be best achieved by taking back the disputed
+land at the price paid by the petitioner’s father to the chamber,
+whereby he would, without needing to take out a new loan,
+simultaneously rid himself of a poor property and receive such a
+significant sum of money that he would be able to free himself
+from most of his debts.
+
+The chamber could more easily take action if the 200 rt loan were
+granted. However, the goal of thoroughly assisting Mr.
+Krückeberg, it seems to me, is not being achieved in this way.
+In the interest of Mr. Krückeberg, I therefore decided to support
+the repurchase of the land by him, which can be significantly
+improved by the drainage trench suggested by O. f. Kreuzinger.
+Bückeburg, 23 Dec. 41
+
+RC[Rentcammer]         Reck
+____
+|===
+
+[cols="1a,1a",frame=none,grid=none,options="noheader"]
+|===
+|image::16-r-2nd-ricke-document.png[link=self]
+|image::17-l.png[link=self]
+|===
+
+=== Reck's reply to the Prince
+
+[cols="1a,1a",frame=none,grid=none,options="noheader"]
+|===
+|Transliteration|Translation
+
+|
+[verse]
+____
+Die Kammer verstelle die weitere Entscheidung unterthänigste zu
+Höchsten Ermessen seÿ indeß der Meinung, daß es rathsamer seÿn
+dürfte, lieber das Darlehn von 200 rp zu bewilligen, indem dabei
+selbst wenn es unsicher steht der Schaden für die Kammer-Kasse
+doch immer geringer seÿn werde, als wenn das fragliche wenig
+nutzbares Land, das Kreutzinger zu 400 rt taxirt für mehr als 800
+rtn wiedergekauft wurde.
+Bbg. 23. Decbr.
+
+Reck
+____
+
+|
+[verse]
+____
+I most humbly leave any further decision to Your Highest
+discretion; however, I am of the opinion that it would be more
+advisable to approve the loan of 200 rt, since even if the
+security is uncertain, the loss to the chamber treasury would
+still be smaller than if the parcel of land in question—of little
+use and appraised by Kreutzinger at 400 rt—were bought back for
+more than 800 rt.
+Bbg., 23 Dec. 1841.
+Reck
+____
+|===
+
+=== Small Left Margin Text in Parentheses
+
+TODO: Explain what it is.
+
+[cols="1a,1a",frame=none,grid=none,options="noheader"]
+|===
+|Transliteration|Translation
+
+|
+[verse]
+____
+(Die Taxe wird indes wohl etwas niedrig seÿn.)
+____
+|
+[verse]
+____
+(However, the appraisal/valuation will likely be somewhat low.)
+____
+|===
+
+=== Prince of Schaumburg-Lippe Georg Wilhelm's Decision and Signature.
+
+In the left margin--rotated below so one can read it--is the decision that the Sovereign ruler of
+Schaumburg-Lippe rendered in the Johann Heinrich 
+
+image::17-l-vertical-text.png[link=self]
+
+[cols="1a,1a",frame=none,grid=none,options="noheader"]
+|===
+|Transliteration|Translation
+
+|
+[verse]
+____
+Ich bewilligt nach dem Antrage der Kammer des Dorlichen von 200
+rtl dem Krückeberg, indem es auch künftig immer noch Zeit seyn
+würde, des Land anzunehmen und die Schuld darauf zu liquidiren.
+Bb 23 Dec.
+Georg Wilhelm
+____
+
+|
+[verse]
+____
+I approve, in accordance with the chamber’s petition, the loan of
+200 rt to Krückeberg, since there will still be time in future to
+accept the land and settle the debt upon it.
+Bbg., 23 Dec.
+Georg Wilhelm
+____
+|===
+
