--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -55,7 +55,7 @@ neues Darlehn von 150 Rthl und die Erlangung der Vergünstigung,
 den Rest in jährlichen Terminen von 5 Rthlr abtragen zu können.
 Auf meiner
 
-Nrpr: 127. [end of first page]
+Nrpr: 1274 [at bottom of first page]
 
 meiner Stätte haften zwar schon 700 Rthl consentirter Schulden,
 allein ich kann mir nicht anders helfen, so ungern ich auch noch
@@ -111,13 +111,14 @@ of property to compel payment].  It is impossible for me to pay
 this entire sum from my own available means, and I know no other
 way to help myself than through a new loan of 150 Reichstaler,
 and obtaining the privilege of being able to repay the remainder
-in annual installments of 5 Reichstaler. On my
+in annual installments of 5 Reichstaler. 
 
-No. pr: 127. [end of first page]
+No. pr: 1274 [at bottom of first page]
 
-property there already rest 700 Reichstaler of secured debts, yet
-I can find no other remedy, however reluctantly I may still
-increase my interest burden. I must therefore most humbly request:
+On my property there already rest 700 Reichstaler of secured
+debts, yet I can find no other remedy, however reluctantly I may
+still increase my interest burden. I must therefore most humbly
+request:
 
 that Your Serene Highness graciously grant me consent to a new
 loan of 150 Reichstaler, and then decree that I may repay the
