--- a/modules/689/pages/doc-06.adoc
+++ b/modules/689/pages/doc-06.adoc
@@ -276,8 +276,8 @@ ____
 
 === Prince of Schaumburg-Lippe Georg Wilhelm's Decision and Signature.
 
-In the left margin--rotated below so one can read it--is the decision that the Sovereign ruler of
-Schaumburg-Lippe rendered in the Johann Heinrich 
+On the last page, written vertically in the left margin--rotated below so one can read it--is the decision of
+he Sovereign ruler of Schaumburg-Lippe.
 
 image::17-l-vertical-text.png[link=self]
 
