--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -50,9 +50,8 @@ NOTE: *distraint* in the text below means the legal seizure of property to compe
                              corner folio:11
 
 
-
-           Actum Bückeburg am Amte
-           den 10ten Juli 1841
+Actum Bückeburg am Amte
+den 10ten Juli 1841
 
         In Sachen
 
@@ -60,41 +59,28 @@ der Hempel Söhne in Minden, Kläger,
           wider
 den Colon Krückeberg No. 10 in Beren-
 busch, Beklagten
-                 [?]ot[?] Capital und
-                 Zinsen.
+         [?]ot[?] Capital und
+         Zinsen.
 
-Advocat Meÿer, Anwalt der
-Kläger bat gehorsamst, da
-der beklagte Krückeberg noch
-nicht, wie ihm durch Decret
-vom 29ten Mai 6ten Juni v. J.
-aufgegeben, die qu: 133 Rthlr
-7 g nebst 5 p.c. Zinsen vom 9ten
-April 1833 bezahlt habe,
-     nunmehro die angehrohte
-     Execution, unter Andro-
-     hung der Auspfandung
-     zu erkennen ref: exp: contum:
-     infidem
-       F. Sander
+Advocat Meÿer, Anwalt der Kläger bat gehorsamst, da der beklagte
+Krückeberg noch nicht, wie ihm durch Decret vom 29ten Mai 6ten
+Juni v. J. aufgegeben, die qu: 133 Rthlr 7 g nebst 5 p.c. Zinsen
+vom 9ten April 1833 bezahlt habe, nunmehro die angehrohte
+Execution, unter Androhung der Auspfandung zu erkennen.
+ref: exp: contum: infidem
+  F. Sander
 
 
       Decretum
 
-Vorstehender Recess wird dem Verklag-
-ten in Abschrift mitgeheilt und
-nunmehr die Execution erkannt und
-den Amtsdiener Möller aufgegeben,
-den Verklagten auf das Capital
-zu 133 Rthlr 7 mgl und Zinsen vom 9ten April
-1833 zu 5 Procent zu 4 mgl Gebühr
-in exequiren und ihm anzudeuten,
-daß[,] wenn die Execution frucht-
-los bleibe und binnen 14 Tagen
-keine Zahlung erfolgen würde,
-auf ferneres Ansuchen der Klä-
-ger sofort die Auspfandung
-erkannt und vollzogen werde.
+Vorstehender Recess wird dem Verklagten in Abschrift mitgeheilt
+und nunmehr die Execution erkannt und den Amtsdiener Möller
+aufgegeben, den Verklagten auf das Capital zu 133 Rthlr 7 mgl und
+Zinsen vom 9ten April 1833 zu 5 Procent zu 4 mgl Gebühr in
+exequiren und ihm anzudeuten, daß[,] wenn die Execution fruchtlos
+bleibe und binnen 14 Tagen keine Zahlung erfolgen würde, auf
+ferneres Ansuchen der Kläger sofort die Auspfandung erkannt und
+vollzogen werde.
 
   Decr: Bückeburg 13t Juli 1841.
   Fürstlich Schaumburg Upp. Amt.
@@ -112,13 +98,12 @@ Bückeburg, Amt Office
 
 In the matter of
 
-Hempel Söhne of Minden, Plaintiffs,
+Hempel Sons of Minden, Plaintiffs,
           versus
 Colon Krückeberg, No. 10 in Berenbusch, Defendant,
-                 Remaining principal and
-                 interest.
+Remaining principal and interest.
 
-Advocate Meÿer, attorney for the plaintiffs, respectfully
+Advocate Meyer, attorney for the plaintiffs, respectfully
 requests that, since the defendant Krückeberg has still not, as
 ordered by decree of 29 May and 6 June of this year, paid the sum
 of 133 Reichsthaler [Rthlr struck through] 7 Mariengroschen
