--- a/modules/689/pages/doc-09.adoc
+++ b/modules/689/pages/doc-09.adoc
@@ -8,7 +8,7 @@
 |===
 
 ....
-NC 818                          pr. m Cam 15 Febr 42
+NC 818                          pr. im Cam 15 Febr 42
 
 [H]
 
@@ -17,20 +17,20 @@ An Fürstliche Rentkammer Bericht vom Amte Bückeberg.
 R. Cam 
 ad acta
 Rburg d. 17/2 42
-     [Censer]
+     Cens[e/u]r
 
 Darlehn für den Colon Krückeborg N: 10 in Baren-
 busch betr:
 
 Num. Pr. 116.
-ad
+[a/ad]
 Num Cam: 274.
 
 Die unterm 12ten v M. ausgefertigte Schuldvorschrei-
-bung haben wir ins amtliche Hypothekenbach
+bung haben wir ins amtliche Hypothekenbuch
 Tag 930 eingetragen, wie solches darin be-
 merkt worden ist, und darunter den Empfang
-der 200 rt rum Culm Krückeberg aner-
+der 200 rt vom Colon Krückeberg aner-
 kommen lassen.
 Indem wir die fragliche Schuldverschrei-
 bung hierneben remittiren, erlauben wir
