--- a/modules/689/pages/doc-09.adoc
+++ b/modules/689/pages/doc-09.adoc
@@ -12,40 +12,42 @@ NC 818                          pr. im Cam 15 Febr 42
 
 [H]
 
-An Fürstliche Rentkammer Bericht vom Amte Bückeberg.
+An Fürstliche Rentkammer
+Bericht vom Amte Bückeberg.
 
 R. Cam 
 ad acta
-Rburg d. 17/2 42
-     Cens[e/u]r
+Bburg d. 17/2 42
+     Censur [Reviewed]
 
-Darlehn für den Colon Krückeborg N: 10 in Baren-
+Darlehn für den Colon Krückeberg N: 10 in Baren-
 busch betr:
 
-Num. Pr. 116.
-[a/ad]
-Num Cam: 274.
+Num. Pr. 116
+ad
+Num. Cam: 274
 
-Die unterm 12ten v M. ausgefertigte Schuldvorschrei-
-bung haben wir ins amtliche Hypothekenbuch
-Tag 930 eingetragen, wie solches darin be-
+Die unterm 12ten v. M. ausgefertigte Schuldverschrei-
+bung [Schuldschein] haben wir ins amtliche Hypothekenbuch
+Pag. 930 eingetragen, wie solches darin be-
 merkt worden ist, und darunter den Empfang
 der 200 rt vom Colon Krückeberg aner-
-kommen lassen.
+kennen lassen.
 Indem wir die fragliche Schuldverschrei-
-bung hierneben remittiren, erlauben wir
+bung [Schuldschein] hierneben remittiren, erlauben wir
 uns pflichtschuldigst zu bemerken, daß wir
 das Darlehen zur Bezahlung der Forderung
-der Hempel Söhne in Minden vorwandt
+der Hempel Söhne in Minden verwandt [verwendet]
 haben.
 Bückeberg den 8 Februar 1842
-F Sander. A Neuhsel, Höcker
+F. Sander. A. Neuhsel, Höcker
 
 B.
-Die anlieg. Obligation ist
-mit Rescr. vom 5. Mai 1845,
-Nr. 2696, dem K Rm. Berger
-quittert zur Retradition an
-Krückeberg zugestellt.
+Die anlieg. Obligation [Schuldschein] ist
+mit Rescr. [Dekret] vom 5. Mai 1845,
+Nr. 2696, dem KRm. [Kammerrat] Berger
+quittirt zur Retradition [Rückgabe]
+an Krückeberg zugestellt.
 Schtt.
 ....
+
