--- a/modules/689/pages/doc-09.adoc
+++ b/modules/689/pages/doc-09.adoc
@@ -68,7 +68,7 @@ Filed by the Chamber, 17 February 1842 – Reviewed
 Loan concerning the tenant farmer (Colon) Krückeberg, No. 10 in
 Bärenbusch
 
-Cross-reference: Provincial file no. 116 to Chamber file no. 274
+Amt file no. 116 cross-referenced to Chamber file no. 274
 
 The debt certificate (Schuldverschreibung, promissory note)
 issued on the 12th of last month has been entered into the
