--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -88,9 +88,7 @@ No. C. 438i
 
 presented in incoming [matters] 2 Oct 1841
 
-To His Serene Highness,
-most gracious ruling Prince
-and Lord!
+Most Serene Prince, gracious reigning Prince and Lord,
 
 [Referred to] the office report
 B[ückeburg], 4 Oct 1841
@@ -100,41 +98,40 @@ B[ückeburg], 4 Oct 1841
 Bückeburg, 4 Oct 1841.
 [Samg/Spreng]
 
-
-My late father, and after his death also my mother, who continued
-my father’s trade as a shoemaker, have incurred with the
-merchants and tanner firm Hempel Sons in Minden a considerable
-leather debt, which, with interest, has now been claimed from me
-in court, and on account of which, as the enclosed decision of
-the Amt shows, I am threatened with distraint [the legal seizure
-of property to compel payment].  It is impossible for me to pay
-this entire sum from my own available means, and I know no other
-way to help myself than through a new loan of 150 Reichstaler,
-and obtaining the privilege of being able to repay the remainder
-in annual installments of 5 Reichstaler. 
+My late father—and, after his death, my mother, who continued my
+father’s trade as a shoemaker— incurred a substantial leather
+debt with the merchants and tanners Hempel & Sons in Minden.
+This debt, with interest, has now been adjudged against me,
+and—as the attached notice from the district office shows—I am
+threatened with distraint (seizure). It is impossible for me to
+pay the entire amount from my own available means, and I see no
+other remedy than to obtain a new loan of 150 thalers and to be
+granted the favor of paying off the remainder in annual
+installments of 5 thalers.
 
 No. pr: 1274 [at bottom of first page]
 
-On my property there already rest 700 Reichstaler of secured
-debts, yet I can find no other remedy, however reluctantly I may
-still increase my interest burden. I must therefore most humbly
-request:
+There are already 700 thalers in officially authorized debts
+secured on my holding ([i.e.,] mortgages registered on the
+property); nevertheless, the only way I can deal with the Hempel
+claim is to take on further borrowing—much as I dislike
+increasing my burden of interest payments. I therefore most
+humbly request:
 
-that Your Serene Highness graciously grant me consent to a new
-loan of 150 Reichstaler, and then decree that I may repay the
-remainder of the unconsented Hempel claim in annual installments
-of 5 Reichstaler.
+that Your Serene Highness graciously consent to a new loan of 150
+thalers and then decree that I may repay the remainder of the
+not-yet-authorized Hempel claim in yearly installments of 5
+thalers.
 
-Remaing in the deepest reverence,
+In deepest respect,
 
 Your Serene Highness’s
-
 most humble servant,
-Colon Krückeberg
-No. 10 in Berenbusch
-                              
-Bückeburg                     
-2 October 1841                
+tenant farmer Krückeberg
+No. 10 in Berenbusch.
+
+Bückeburg, the 2nd (of the same month), 1841.
+[Reg. no. 1274]   [Office note: Conc. G. W. Fuchs]
 drafted by G. W. Fuchs                             
 with fee
 ____
