--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -76,7 +76,7 @@ ref: exp: contum: infidem
 Vorstehender Recess wird dem Verklagten in Abschrift mitgeheilt
 und nunmehr die Execution erkannt und den Amtsdiener Möller
 aufgegeben, den Verklagten auf das Capital zu 133 Rthlr 7 mgl und
-Zinsen vom 9ten April 1833 zu 5 Procent zu 4 mgl Gebühr in
+29 Zinsen vom 9ten April 1833 zu 5 Procent zu 4 mgl Gebühr in
 exequiren und ihm anzudeuten, daß[,] wenn die Execution fruchtlos
 bleibe und binnen 14 Tagen keine Zahlung erfolgen würde, auf
 ferneres Ansuchen der Kläger sofort die Auspfandung erkannt und
@@ -100,16 +100,15 @@ In the matter of
 
 Hempel Sons of Minden, Plaintiffs,
           versus
-Colon Krückeberg, No. 10 in Berenbusch, Defendant,
-Remaining principal and interest.
+Colon Krückeberg, No. 10 in Berenbusch, Defendant, Remaining principal
+and interest.
 
-Advocate Meyer, attorney for the plaintiffs, respectfully
-requests that, since the defendant Krückeberg has still not, as
-ordered by decree of May 29^th^ and June 6^th^ of this year, paid
-the sum of 133 Reichsthaler [Rthlr struck through] 7
-Mariengroschen together with 5 percent interest from 9 April
-1833, the threatened execution be carried out, under threat of
-*distraint*.
+Advocate Meyer, attorney for the plaintiffs, respectfully requests that,
+since the defendant Krückeberg has still not, as ordered by decree of May
+29^th^ and June 6^th^ of this year, paid the sum of 133 Reichsthaler
+[Rthlr struck through] 7 Mariengroschen together with 5 percent interest
+from 9 April 1833, the threatened execution be carried out, under threat
+of *distraint*.
 
 To be decided – referred, expedited, for default:
 in good faith.
