--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -107,7 +107,7 @@ Advocate Meyer, attorney for the plaintiffs, respectfully requests that,
 since the defendant Krückeberg has still not, as ordered by decree of May
 29^th^ and June 6^th^ of this year, paid the sum of 133 Reichsthaler
 [Rthlr struck through] 7 Mariengroschen together with 5 percent interest
-from 9 April 1833, the threatened execution be carried out, under threat
+from April 9, 1833, the threatened execution be carried out, under threat
 of *distraint*.
 
 To be decided – referred, expedited, for default:
