--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -59,7 +59,7 @@ der Hempel Söhne in Minden, Kläger,
           wider
 den Colon Krückeberg No. 10 in Beren-
 busch, Beklagten
-         [?]ot[?] Capital und
+         [Totl] Capital und
          Zinsen.
 
 Advocat Meÿer, Anwalt der Kläger bat gehorsamst, da der beklagte
@@ -106,9 +106,8 @@ and interest.
 Advocate Meyer, attorney for the plaintiffs, respectfully requests that,
 since the defendant Krückeberg has still not, as ordered by decree of May
 29^th^ and June 6^th^ of this year, paid the sum of 133 Reichsthaler
-[Rthlr struck through] 7 Mariengroschen together with 5 percent interest
-from April 9, 1833, the threatened execution be carried out, under threat
-of *distraint*.
+7 Mariengroschen together with 5 percent interest from April 9, 1833,
+the threatened execution be carried out, under threat of *distraint*.
 
 To be decided – referred, expedited, for default:
 in good faith.
