--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -109,8 +109,7 @@ since the defendant Krückeberg has still not, as ordered by decree of May
 7 Mariengroschen together with 5 percent interest from April 9, 1833,
 the threatened execution be carried out, under threat of *distraint*.
 
-To be decided – referred, expedited, for default:
-in good faith.
+Entered and issued as a default judgment, in witness thereof.
        F. Sander
 
 
