--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -35,10 +35,26 @@ In short, this document records the *turn from warning to active enforcement*: t
 proceed, sets the exact *sum and interest*, and puts Krückeberg on a *14-day clock* toward seizure if he does
 not pay.
 
-
 == Transliteration and Translation
 
-NOTE: *distraint* in the text below means the legal seizure of property to compel payment.
+[NOTE]
+====
+*distraint* in the text below means the legal seizure of property to compel payment.
+
+A *default judgment* means a court decision that is entered against a party who fails to take part in the case
+— usually because they don’t show up, don’t respond, or otherwise ignore the summons.
+
+In older German legal language (in contumaciam), it meant:
+
+* The defendant did not appear when summoned, or
+
+* The defendant refused to answer or participate,
+
+* So the court decided the matter without hearing their side and in favor of the other party.
+
+So in your Krückeberg document, when the clerk writes _contum._, he’s noting that the judgment was rendered
+because of *Krückeberg’s non-appearance (or non-response)*, not after a contested hearing.
+====
 
 [cols="1a,1a"]
 |===
