--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -35,11 +35,9 @@ In short, this document records the *turn from warning to active enforcement*: t
 proceed, sets the exact *sum and interest*, and puts Krückeberg on a *14-day clock* toward seizure if he does
 not pay.
 
-== Transliteration and Translation
+=== Terms
 
-[NOTE]
-====
-*distraint* in the text below means the legal seizure of property to compel payment.
+*distraint* in the text means the legal seizure of property to compel payment.
 
 A *default judgment* means a court decision that is entered against a party who fails to take part in the case
 — usually because they don’t show up, don’t respond, or otherwise ignore the summons.
@@ -56,6 +54,7 @@ So in your Krückeberg document, when the clerk writes _contum._, he’s noting 
 because of *Krückeberg’s non-appearance (or non-response)*, not after a contested hearing.
 ====
 
+== Transliteration and Translation
 [cols="1a,1a"]
 |===
 |Transliteration|Translation
